# grimoire

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/plans/: post-v1-ranked-backlog.md
migrations/: 001_init.sql  002_multi_volume_relations.sql  003_item_artifacts.sql  004_chunks_section.sql
src/grimoire/: app.py  book_split.py  chunk.py  cli.py  config.py  db.py  dedup.py  dedup_llm.py  identify.py  index.py  ingest.py  models.py  section.py
src/grimoire/embed/: base.py  bge_m3.py  specter2.py
src/grimoire/extract/: book_structure.py  epub.py  grobid.py  pdf.py  tei.py
src/grimoire/mcp/: citation.py  models.py  server.py  tools.py
src/grimoire/migrate/: __init__.py  zotero.py
src/grimoire/resolve/: arxiv_api.py  crossref.py  llm_fallback.py  openlibrary.py
src/grimoire/search/: __init__.py  hybrid.py  keyword.py  models.py  semantic.py
src/grimoire/storage/: artifacts.py  cas.py
src/grimoire/web/: __init__.py  files.py  jinja_filters.py  opds.py  queries.py  ui.py
src/grimoire/web/templates/: base.html  home.html  item.html
tests/: conftest.py  test_artifacts.py  test_book_split.py  test_cas.py  test_chunk.py  test_dedup.py  test_dedup_editions.py  test_embed_base.py  test_extract.py  test_files.py  test_grobid.py  test_health.py  test_heavy_embed.py  test_identify.py  test_index.py  test_index_section_tagging.py  test_ingest.py  test_invariants.py  test_mcp_search_section_filter.py  test_mcp_server.py  test_mcp_tools.py  test_metadata_merge.py  test_migrate_zotero.py  test_multi_volume.py  test_opds.py  test_resolve.py  test_rrf.py  test_schema.py  test_search_facade.py  test_search_keyword.py  test_search_semantic.py  test_section.py  test_web_ui.py
tests/support/: stub_embedder.py
tools/: phase1_zotero_oracle.py  phase2_search_oracle.py  phase3_dedup_oracle.py  phase6_book_oracle.py  phase7_migration_oracle.py
